--- a/Home.html
+++ b/Home.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AniMend || Home</title>
+    <title>AniMend | Home</title>
     <link rel="icon" href="img/logo.png" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -24,25 +19,15 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#home">
-            <img class="logo" src="img/logo.png" />AniMend</a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            <img class="logo" src="img/logo.png" />AniMend</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#Home"
-                  >Home</a
-                >
+                <a class="nav-link active" aria-current="page" href="#Home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Anime">Anime List</a>
@@ -51,13 +36,8 @@
                 <a class="nav-link" href="#Movie">Movie</a>
               </li>
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
                   Genre
                 </a>
                 <ul class="dropdown-menu">
@@ -100,9 +80,7 @@
                     <a class="dropdown-item" href="#Militiary">Military</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#Psychological"
-                      >Psychological</a
-                    >
+                    <a class="dropdown-item" href="#Psychological">Psychological</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#Romance">Romance</a>
@@ -122,9 +100,7 @@
                   </li>
                   <li><a class="dropdown-item" href="#Sport">Sport</a></li>
                   <li>
-                    <a class="dropdown-item" href="#Supernatural"
-                      >Supernatural</a
-                    >
+                    <a class="dropdown-item" href="#Supernatural">Supernatural</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#Thriller">Thriller</a>
@@ -140,86 +116,138 @@
       </nav>
     </header>
 
-    <div class="flex-container1">
-      <center><h1 class="title">RECOMMEND</h1></center>
-      <div
-        id="carouselExampleCaptions"
-        class="carousel slide"
-        data-bs-ride="false"
-      >
+    <div class="flex-container">
+      <h1 class="title">RECOMMEND</h1>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+            aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+            aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+            aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"
+            aria-label="Slide 8"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8"
+            aria-label="Slide 9"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9"
+            aria-label="Slide 10"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/gintama.jpg" class="center" height="710px" />
+            <img src="img/gintama1.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>GINTAMA</h5>
+              <h5>Gintama</h5>
               <p>TV Series</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="img/fatezero.jpg"
-              class="d-block w-100"
-              height="710px"
-              style="object-fit: cover"
-            />
+            <img src="img/fate/fatezero s2.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>FATE/ZERO</h5>
+              <h5>Fate/Zero 2nd Season</h5>
               <p>TV Series</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="img/jjk 0.png"
-              class="d-block w-100"
-              height="710px"
-              style="object-fit: cover"
-            />
+            <img src="img/jjk 0.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>JUJUTSU KAISEN 0</h5>
+              <h5>Jujutsu Kaisen 0</h5>
               <p>Movie</p>
             </div>
           </div>
+          <div class="carousel-item">
+            <img src="img/fmab.jpg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Fullmetal Alchemist: Brotherhood</h5>
+              <p>TV Series</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/ngnl zero.jpg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>No Game No Life Zero</h5>
+              <p>Movie</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/kaguya.jpg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Kaguya-sama: Love is War</h5>
+              <p>TV Series</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/deathnote.jpg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Death Note</h5>
+              <p>TV Series</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/fate/fsn hf3.jpeg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Fate/Stay Night: Heaven Feels III</h5>
+              <p>Movie</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/violet.jpeg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Violet Evergarden</h5>
+              <p>TV Series</p>
+            </div>
+          </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+    </div>
+
+    <div class="container">
+      <h2 class="sub-title">COMEDY</h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="row">
+            <div class="item active">
+              <img src="img/gintama.jpg" width="200px">
+            </div>
+            <div class="item">
+              <img src="img/kaguya2.jpg" width="200px">
+            </div>
+            <div class="item">
+              <img src="img/ngnl.jpg" width="200px">
+            </div>
+          </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
 
@@ -228,7 +256,7 @@
         <section id="left">
           <h4>Link to Web Anime English Sub</h4>
           <ul class="flex-container">
-            <li><a href="https://gogoanime.ar/">Gogoanime</a></li>
+            <li><a href="https://gogoanime.bid/">Gogoanime</a></li>
             <li><a href="https://animedao.to/">AnimeDao</a></li>
             <li><a href="https://animixplay.to/">AniMixPlay</a></li>
             <li>
@@ -248,4 +276,5 @@
       </div>
     </div>
   </body>
+
 </html>
