--- a/Movie.html
+++ b/Movie.html
@@ -3,10 +3,149 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AniMend || List All Movie</title>
+    <title>AniMend | List All Movie</title>
+    <link rel="icon" href="img/logo.png" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#Home">
+            <img class="logo" src="img/logo.png" />AniMend</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Anime">Anime List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Movie">Movie</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Genre
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#Action">Action</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Adventure">Adventure</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Comedy">Comedy</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#Crime">Crime</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Demons">Demons</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Detective">Detective</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#Drama">Drama</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Fantasy">Fantasy</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#Game">Game</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Historical">Historical</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Horror">Horror</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Isekai">Isekai</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#Magic">Magic</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Martial">Martial Arts</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#Mecha">Mecha</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Militiary">Military</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Psychological">Psychological</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Romance">Romance</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#School">School</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#SciFi">Sci-Fi</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Seinen">Seinen</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Shounen">Shounen</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Slice">Slice of Life</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#Sport">Sport</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#Supernatural">Supernatural</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Thriller">Thriller</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#Time">Time Travel</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     
+    <div class="container" style="background-color: darkturquoise;">
+      <div class="list">
+        <ul style="list-style: none;">
+          <li class="alp"><a href="">ALL</a></li>
+          <li class="alp"><a href="">#</a></li>
+          <li class="alp"><a href="">A</a></li>
+          <li class="alp"><a href="">B</a></li>
+          <li class="alp"><a href="">C</a></li>
+          <li class="alp"><a href="">D</a></li>
+          <li class="alp"><a href="">E</a></li>
+          <li class="alp"><a href="">F</a></li>
+          <li class="alp"><a href="">G</a></li>
+          <li class="alp"><a href="">H</a></li>
+          <li class="alp"><a href="">I</a></li>
+          <li class="alp"><a href="">J</a></li>
+          <li class="alp"><a href="">K</a></li>
+          <li class="alp"><a href="">L</a></li>
+          <li class="alp"><a href="">M</a></li>
+          <li class="alp"><a href="">N</a></li>
+          <li class="alp"><a href="">O</a></li>
+          <li class="alp"><a href="">P</a></li>
+          <li class="alp"><a href="">Q</a></li>
+          <li class="alp"><a href="">R</a></li>
+          <li class="alp"><a href="">S</a></li>
+          <li class="alp"><a href="">T</a></li>
+          <li class="alp"><a href="">U</a></li>
+          <li class="alp"><a href="">V</a></li>
+          <li class="alp"><a href="">W</a></li>
+          <li class="alp"><a href="">X</a></li>
+          <li class="alp"><a href="">Y</a></li>
+          <li class="alp"><a href="">Z</a></li>
+        </ul>
+    
+      </div>
   </body>
 </html>
