--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#home">
+          <a class="navbar-brand" href="#Home.html">
             <img class="logo" src="img/logo.png" />AniMend</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+                <a class="nav-link active" aria-current="page" href="#Home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Anime">Anime List</a>
+                <a class="nav-link" href="#Anime.html">Anime List</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Movie">Movie</a>
@@ -142,66 +142,73 @@
             aria-label="Slide 10"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-interval="5000">
             <img src="img/gintama1.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Gintama</h5>
               <p>TV Series</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/fate/fatezero s2.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Fate/Zero 2nd Season</h5>
               <p>TV Series</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/jjk 0.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Jujutsu Kaisen 0</h5>
               <p>Movie</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/fmab.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Fullmetal Alchemist: Brotherhood</h5>
               <p>TV Series</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/ngnl zero.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>No Game No Life Zero</h5>
               <p>Movie</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/kaguya.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Kaguya-sama: Love is War</h5>
               <p>TV Series</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/deathnote.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Death Note</h5>
               <p>TV Series</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/fate/fsn hf3.jpeg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Fate/Stay Night: Heaven Feels III</h5>
               <p>Movie</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="5000">
             <img src="img/violet.jpeg" class="center" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Violet Evergarden</h5>
+              <p>TV Series</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="5000">
+            <img src="img/btybw.jpeg" class="center" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Bleach: Thousand-Year Blood War</h5>
               <p>TV Series</p>
             </div>
           </div>
@@ -219,58 +226,59 @@
       </div>
     </div>
 
-    <div class="container">
-      <h2 class="sub-title">COMEDY</h2>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="row">
-            <div class="item active">
-              <img src="img/gintama.jpg" width="200px">
-            </div>
-            <div class="item">
-              <img src="img/kaguya2.jpg" width="200px">
-            </div>
-            <div class="item">
-              <img src="img/ngnl.jpg" width="200px">
-            </div>
+    <div class="container1">
+      <div class="row1">
+        <main class="genre-carousel">
+          <h2 class="genre">FANTASY</h2>
+
+        </main>
+        <aside class="popular">
+          <h3 class="trend">POPULAR</h3>
+          <div class="row1">
+            <section class="img">
+              <img src="img/violet m2.jpeg" class="pop">
+            </section>
+            <aside class="text">
+              Violet Evergarden Movie<br>
+              Type : Movie<br>
+              Duration : 2hr 20min<br>
+            </aside>
           </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
+          <div class="row1">
+            <section class="img">
+              <img src="img/fate/fsn ubw s2.jpeg" class="pop">
+            </section>
+            <aside class="text">
+              Fate/stay night: Unlimited Blade Works<br>
+              Type : TV Series<br>
+              Episodes : 12<br>
+              Duration : 24min/ep<br>
+            </aside>
+          </div>
+        </aside>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
+    <div class="container2">
+      <div class="row2">
         <section id="left">
           <h4>Link to Web Anime English Sub</h4>
           <ul class="flex-container">
-            <li><a href="https://gogoanime.bid/">Gogoanime</a></li>
-            <li><a href="https://animedao.to/">AnimeDao</a></li>
-            <li><a href="https://animixplay.to/">AniMixPlay</a></li>
+            <li><a href="https://gogoanime.bid/" style="text-decoration: none;">Gogoanime</a></li>
+            <li><a href="https://animedao.to/" style="text-decoration: none;">AnimeDao</a></li>
+            <li><a href="https://animepahe.ru/" style="text-decoration: none;">animepahe</a></li>
             <li>
-              <a href="https://kissanime.com.ru/kissanime.html">KissAnime</a>
+              <a href="https://kissanime.com.ru/kissanime.html" style="text-decoration: none;">KissAnime</a>
             </li>
           </ul>
         </section>
         <aside id="right">
           <h4>Link to Web Anime Indonesia Sub</h4>
-          <ul class="flex-container">
-            <li><a href="https://www.animebatch.id/">Anime Batch</a></li>
-            <li><a href="https://anikyojin.org/">Anikyojin</a></li>
-            <li><a href="https://otakudesu.bid/">Otaku Desu</a></li>
-            <li><a href="https://anoboy.bar/">anoBoy</a></li>
+          <ul class="flex-container" style="text-decoration: none;">
+            <li><a href="https://www.animebatch.id/" style="text-decoration: none;">Anime Batch</a></li>
+            <li><a href="https://anikyojin.org/" style="text-decoration: none;">Anikyojin</a></li>
+            <li><a href="https://otakudesu.bid/" style="text-decoration: none;">Otaku Desu</a></li>
+            <li><a href="https://anoboy.bar/" style="text-decoration: none;">anoBoy</a></li>
           </ul>
         </aside>
       </div>
