--- a/Home.html
+++ b/Home.html
@@ -7,33 +7,39 @@
     <title>AniMend | Home</title>
     <link rel="icon" href="img/logo.png" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"></script>
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#Home.html">
-            <img class="logo" src="img/logo.png" />AniMend</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#home.html">
+            <img src="img/logo.png" width="100px" height="74" style="margin: 0 15px;"
+              class="d-inline-block align-text-center">
+            AniMend
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#Home.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="#home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Anime.html">Anime List</a>
+                <a class="nav-link" href="#anime.html">Anime List</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Movie">Movie</a>
+                <a class="nav-link" href="#movie.html">Movies</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -110,15 +116,22 @@
                   </li>
                 </ul>
               </li>
+              <li class="nav-item">
+                <a class="nav-link">Link</a>
+              </li>
             </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
           </div>
         </div>
       </nav>
     </header>
 
-    <div class="flex-container">
+    <div class="container-fluid">
       <h1 class="title">RECOMMEND</h1>
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -142,74 +155,74 @@
             aria-label="Slide 10"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="5000">
-            <img src="img/gintama1.jpg" class="center" />
+          <div class="carousel-item active" data-bs-interval="4000">
+            <img src="img/gintama/gintama1.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Gintama</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Gintama</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
+          <div class="carousel-item" data-bs-interval="4000">
             <img src="img/fate/fatezero s2.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Fate/Zero 2nd Season</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Fate/Zero 2nd Season</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
-            <img src="img/jjk 0.jpg" class="center" />
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="img/jujutsu/jjk 0.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Jujutsu Kaisen 0</h5>
-              <p>Movie</p>
+              <h5 class="caption">Jujutsu Kaisen 0</h5>
+              <p class="caption">Movie</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
+          <div class="carousel-item" data-bs-interval="4000">
             <img src="img/fmab.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Fullmetal Alchemist: Brotherhood</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Fullmetal Alchemist: Brotherhood</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
+          <div class="carousel-item" data-bs-interval="4000">
             <img src="img/ngnl zero.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>No Game No Life Zero</h5>
-              <p>Movie</p>
+              <h5 class="caption">No Game No Life Zero</h5>
+              <p class="caption">Movie</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
-            <img src="img/kaguya.jpg" class="center" />
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="img/kaguyasama/kaguya.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Kaguya-sama: Love is War</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Kaguya-sama: Love is War</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
+          <div class="carousel-item" data-bs-interval="4000">
             <img src="img/deathnote.jpg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Death Note</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Death Note</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
+          <div class="carousel-item" data-bs-interval="4000">
             <img src="img/fate/fsn hf3.jpeg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Fate/Stay Night: Heaven Feels III</h5>
-              <p>Movie</p>
+              <h5 class="caption">Fate/Stay Night: Heaven Feels III</h5>
+              <p class="caption">Movie</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
-            <img src="img/violet.jpeg" class="center" />
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="img/violet/violet.jpeg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Violet Evergarden</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Violet Evergarden</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
-          <div class="carousel-item" data-interval="5000">
-            <img src="img/btybw.jpeg" class="center" />
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="img/bleach/btybw.jpeg" class="center" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Bleach: Thousand-Year Blood War</h5>
-              <p>TV Series</p>
+              <h5 class="caption">Bleach: Thousand-Year Blood War</h5>
+              <p class="caption">TV Series</p>
             </div>
           </div>
         </div>
@@ -236,7 +249,7 @@
           <h3 class="trend">POPULAR</h3>
           <div class="row1">
             <section class="img">
-              <img src="img/violet m2.jpeg" class="pop">
+              <img src="img/violet/violet m2.jpeg" class="pop">
             </section>
             <aside class="text">
               Violet Evergarden Movie<br>
@@ -255,31 +268,6 @@
               Duration : 24min/ep<br>
             </aside>
           </div>
-        </aside>
-      </div>
-    </div>
-
-    <div class="container2">
-      <div class="row2">
-        <section id="left">
-          <h4>Link to Web Anime English Sub</h4>
-          <ul class="flex-container">
-            <li><a href="https://gogoanime.bid/" style="text-decoration: none;">Gogoanime</a></li>
-            <li><a href="https://animedao.to/" style="text-decoration: none;">AnimeDao</a></li>
-            <li><a href="https://animepahe.ru/" style="text-decoration: none;">animepahe</a></li>
-            <li>
-              <a href="https://kissanime.com.ru/kissanime.html" style="text-decoration: none;">KissAnime</a>
-            </li>
-          </ul>
-        </section>
-        <aside id="right">
-          <h4>Link to Web Anime Indonesia Sub</h4>
-          <ul class="flex-container" style="text-decoration: none;">
-            <li><a href="https://www.animebatch.id/" style="text-decoration: none;">Anime Batch</a></li>
-            <li><a href="https://anikyojin.org/" style="text-decoration: none;">Anikyojin</a></li>
-            <li><a href="https://otakudesu.bid/" style="text-decoration: none;">Otaku Desu</a></li>
-            <li><a href="https://anoboy.bar/" style="text-decoration: none;">anoBoy</a></li>
-          </ul>
         </aside>
       </div>
     </div>
